So many updates.

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -19,7 +19,7 @@ footer {
 		justify-content: center;
 		align-items: center;
 		width: 100%;
-		margin-bottom: 5%;
+		margin-bottom: 15px;
 
 		@keyframes bounce {
 			0%, 100%, 20%, 50%, 80% {
