Updated About me and credited Designer.

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -60,6 +60,15 @@ footer {
 		color: $white;
 		font-family: 'Poppins', sans-serif;
 		font-size: .8rem;
+
+		span {
+			color: $pink;
+		}
+
+		.credit {
+			text-decoration: none;
+			color: $pink;
+		}
 	}
 }
 
