--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -190,6 +190,15 @@ $lightpurple: #585F7B;
 	    transition: all 0.5s;
 	}
 
+	.furniture-world a {
+	    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+		url("../img/furniture-world.png");
+		background-size: 0, cover;
+		background-position: center;
+	    transform-style: preserve-3d;
+	    transition: all 0.5s;
+	}
+
 
 
 	.thumb:hover a {
