--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,8 +35,6 @@ $lightpurple: #585F7B;
 
 @import 'portfolio-pieces';
 
-
-
 /* 1. Main Layout ================================= */
 
 * {
@@ -48,7 +46,8 @@ $lightpurple: #585F7B;
 }
 
 body {
-	background-image: url(../img/dust.png);
+	// background-image: url(../img/dust.png);
+	background: #fff;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -359,6 +358,15 @@ body {
 		.marta-redesign a {
 		    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
 			url("../img/marta-redesign2.png");
+			background-size: 0, cover;
+			background-position: center;
+		    transform-style: preserve-3d;
+		    transition: all 0.5s;
+		}
+
+		.furniture-world a {
+		    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+			url("../img/furniture-world.png");
 			background-size: 0, cover;
 			background-position: center;
 		    transform-style: preserve-3d;
