Added Furniture Project to Portfolio

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -366,7 +366,7 @@ body {
 
 		.furniture-world a {
 		    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
-			url("../img/furniture-world.png");
+			url("../img/furniture-world2.png");
 			background-size: 0, cover;
 			background-position: center;
 		    transform-style: preserve-3d;
