--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -192,7 +192,7 @@ $lightpurple: #585F7B;
 
 	.furniture-world a {
 	    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
-		url("../img/furniture-world.png");
+		url("../img/furniture-world2.png");
 		background-size: 0, cover;
 		background-position: center;
 	    transform-style: preserve-3d;
