--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -3,9 +3,9 @@
 	background: $blue;
 	color: $white;
 	font-size: 2rem;
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 	width: 100%;
-	box-shadow: 0px 2px 33px 10px rgba(204,204,204,1);
+	box-shadow: 0px 2px 33px 10px rgba(204, 204, 204, 1);
 
 	a {
 		color: $white;
@@ -15,7 +15,6 @@
 	}
 
 	@media screen and (min-width: 600px) {
-
 		font-size: 2.2rem;
 
 		a {
@@ -23,7 +22,6 @@
 			padding: 15px;
 			text-decoration: none;
 		}
-
 	}
 }
 
@@ -34,10 +32,10 @@
 .call-to-action {
 	// color: $turquoise;
 	color: $pink;
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 	margin-top: 10%;
 	margin-bottom: 10%;
-	font-size: calc(.5em + 3vw);
+	font-size: calc(0.5em + 3vw);
 	line-height: calc(1.1em + 0.5vw);
 	width: 70%;
 	text-align: center;
@@ -63,19 +61,19 @@
 		select:focus,
 		textarea:focus,
 		button:focus {
-		    outline: none;
+			outline: none;
 		}
 
 		input::placeholder,
 		textarea::placeholder {
-		  color: $white;
-		  opacity: .6;
-		  font-size: 1rem;
+			color: $white;
+			opacity: 0.6;
+			font-size: 1rem;
 		}
 
 		input,
 		textarea {
-			font-family: 'Poppins', sans-serif;
+			font-family: "Poppins", sans-serif;
 			background: $blue;
 			border: none;
 			width: 100%;
@@ -90,7 +88,7 @@
 			}
 
 			@media screen and (min-width: 900px) {
-				height: 10vh;
+				height: 7vh;
 			}
 		}
 
@@ -103,7 +101,7 @@
 		}
 
 		label {
-			font-family: 'Poppins', sans-serif;
+			font-family: "Poppins", sans-serif;
 			display: flex;
 			flex-direction: column;
 			color: $turquoise;
@@ -112,7 +110,7 @@
 
 		.form-button {
 			color: $pink;
-			font-family: 'Poppins', sans-serif;
+			font-family: "Poppins", sans-serif;
 			font-size: 2em;
 			cursor: pointer;
 			display: inline-block;
@@ -139,7 +137,7 @@
 
 		.form-button.anim-destination span::before {
 			position: absolute;
-			white-space: nowrap;	
+			white-space: nowrap;
 			top: 115%;
 			content: attr(data-hover);
 		}
@@ -153,8 +151,8 @@
 
 		.thank-you-php {
 			color: $pink;
-			font-family: 'Poppins', sans-serif;
-			font-size: calc(.5em + 3vw);
+			font-family: "Poppins", sans-serif;
+			font-size: calc(0.5em + 3vw);
 			line-height: calc(1.1em + 0.5vw);
 			width: 70%;
 			text-align: center;
