--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,3 @@
-$lightpink: #ffacdb;
-$white: #fff;
-$pink: #d31682;
-$blue: #151e46;
-$turquoise: #45c1c0;
-$lightpurple: #585f7b;
-
 @keyframes bounce {
 	0%,
 	100%,
@@ -28,6 +21,7 @@ $lightpurple: #585f7b;
 }
 
 @import "reset";
+@import "variables";
 @import "nav-bar";
 @import "hamburger-menu";
 @import "header";
